--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
 
 dependencies {
 
+    // image load에 활용하는 라이브러리
+    // https://mvnrepository.com/artifact/com.github.bumptech.glide/glide
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.11.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
